--- a/Visualization.ipynb
+++ b/Visualization.ipynb
@@ -8,6 +8,15 @@
       ],
       "metadata": {}
     },
+    "cells": [
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Visualizations with Cosmic notebooks\n",
+        "In this notebook, we'll run some queries of our data and visualize it using bokeh."
+      ],
+      "metadata": {}
+    },
     {
       "cell_type": "markdown",
       "source": [
